syntax="proto3";
option java_package="com.example.customerservice.stub";
service CustomerService{
  rpc getAllCustomers(GetAllCustomersRequest) returns (GetCustomersResponse);
  rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
  rpc saveCustomer(SavedCustomerRequest) returns (SaveCustomerResponse);
}

message GetAllCustomersRequest{}
message GetCustomersResponse{
  repeated Customer customer = 1;
}

message Customer{
  int64 id=1;
  string nom=2;
  string email=3;
}

message GetCustomerByIdRequest{
  int64 customeId=1;
}

message GetCustomerByIdResponse{
  Customer customer=1;
}

message SavedCustomerRequest{
  CustomerRequest customer=1;
}
message CustomerRequest{
  string nom=1;
  string email=2;
}

message SaveCustomerResponse{
  Customer customer=1;
}
